--- a/resume.tex
+++ b/resume.tex
@@ -55,7 +55,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Harry}{Donovan}
 \position{University Student{\enskip\cdotp\enskip}Computing For Games}
-\address{38 Beacon Road, Falmouth, TR11 2LT}
+\address{Falmouth, Cornwall, United Kingdom}
 
 \mobile{07747 596 167}
 \email{harry.bd11@gmail.com}
