--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -14,11 +14,10 @@
         \text{}
         \item
         \item Proficient in C\# 
-        \item Experience in C++, Matlab, Python, Pascal and Kerboscript with brief experience using OpenGL
-        \item Management and organisation of a team
-        \item A desire to help and teach others
-        \item Responsive listener capable of taking a brief through to completion
-        \item Experience with Windows and Linux including regular use of the command line
+        \item Confident with version control using Git, including branching and fixing merge conflicts
+        \item Familiar with Unity
+        \item Experienced with agile and scrum development practices
+        \item Confident and organised team and scrum leader
     \end{cvitems}
 
 \end{cvparagraph}
