Added section for published games

--- a/resume.tex
+++ b/resume.tex
@@ -46,6 +46,11 @@
 % If you would like to change the social information separator from a pipe (|) to something else
 \renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 
+\hypersetup{
+    colorlinks=true,   
+    urlcolor=awesome-red
+}
+
 
 %-------------------------------------------------------------------------------
 %	PERSONAL INFORMATION
@@ -54,10 +59,10 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Harry}{Donovan}
-\position{University Student{\enskip\cdotp\enskip}Computing For Games}
+\position{University Student{\enskip\cdotp\enskip}Games Programmer}
 \address{Falmouth, Cornwall, United Kingdom}
 
-\mobile{07747 596 167}
+% \mobile{07747 596 167}
 \email{harry.bd11@gmail.com}
 % \homepage{www.posquit0.com}
 \github{HDonovan96}
@@ -97,14 +102,15 @@
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex} % First draft done
 \input{resume/skills.tex}
+\input{resume/published.tex}
 \input{resume/education.tex}
 \input{resume/projects.tex}
 \input{resume/experience.tex}
 % \input{resume/honors.tex}
-\input{resume/presentation.tex}
+% \input{resume/presentation.tex}
 % \input{resume/writing.tex}
-\input{resume/committees.tex}
-\input{resume/extracurricular.tex}
+% \input{resume/committees.tex}
+% \input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
