--- a/resume/education.tex
+++ b/resume/education.tex
@@ -17,7 +17,7 @@
     {Sept. 2019 - Current} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item Worked with a multi-discipline team to bring multiple games through a full development cycle
       \end{cvitems}
     }
 
