--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -8,6 +8,27 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+    \cventry
+        {Senior Student Ambassador}
+        {FXPlus}
+        {Falmouth, Cornwall}
+        {June 2020 - Current}
+        {
+            \begin{cvitems}
+                \item
+            \end{cvitems}
+        }
+
+    \cventry
+        {Student Ambassador}
+        {FXPlus}
+        {Falmouth, Cornwall}
+        {October 2019 - June 2020}
+        {
+            \begin{cvitems}
+                \item Finished this employment due to being promoted to senior ambassador
+            \end{cvitems}
+        }
 
 % %---------------------------------------------------------
 %   \cventry
