--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -23,27 +23,27 @@
         \end{cvitems}  
     }
 
-    \cventry
-    {\href{https://github.com/HDonovan96/Iterative_Rocket_Glider_Design}{Rocket Glider Github Link}}
-    {Rocket Glider Analysis}
-    {C++}
-    {January 2019 - March 2019}
-    {
-        \begin{cvitems}
-            \item Used an iterative method to find the best dimensions for a rocket powered glider from know boundaries
-            \item V1.1 was optimisation and reduced the run time by 60\%
-        \end{cvitems}
-    }
+    % \cventry
+    % {\href{https://github.com/HDonovan96/Iterative_Rocket_Glider_Design}{Rocket Glider Github Link}}
+    % {Rocket Glider Analysis}
+    % {C++}
+    % {January 2019 - March 2019}
+    % {
+    %     \begin{cvitems}
+    %         \item Used an iterative method to find the best dimensions for a rocket powered glider from know boundaries
+    %         \item V1.1 was optimisation and reduced the run time by 60\%
+    %     \end{cvitems}
+    % }
     
-    \cventry
-    {\href{https://github.com/HDonovan96/Programming_Nursery/tree/master/KOS}{Auto-Pilot Github Link}}
-    {Auto-Pilot Script}
-    {kOS}
-    {January 2019 - March 2019}
-    {
-        \begin{cvitems}
-            \item Used OOP to create a script to take a rocket from the launch pad to a sub-orbital path
-            \item Improved the script to automatically circularise the orbit once a sub-orbital trajectory is achieved
-        \end{cvitems}
-    }
+    % \cventry
+    % {\href{https://github.com/HDonovan96/Programming_Nursery/tree/master/KOS}{Auto-Pilot Github Link}}
+    % {Auto-Pilot Script}
+    % {kOS}
+    % {January 2019 - March 2019}
+    % {
+    %     \begin{cvitems}
+    %         \item Used OOP to create a script to take a rocket from the launch pad to a sub-orbital path
+    %         \item Improved the script to automatically circularise the orbit once a sub-orbital trajectory is achieved
+    %     \end{cvitems}
+    % }
 \end{cventries}
