--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,7 +8,7 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    Avid programmer with a strong knowlege of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I am a confident presenter who is comfortable leading a team and liasing between different disciplines. I am currently seeking a summer internship position in order to gain experience in the industry, as well as make strong contacts which I hope to utilize throughout my degree and upon graduation. My ideal position would be acting as a lead programmer supervising a team or as a project manager.
-% %---------------------------------------------------------
-% Current Site Reliability Engineer at start-up company Kasa. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+    Avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I am a confident presenter who is comfortable leading a team and liaising between different disciplines. I am currently seeking a summer internship position in order to gain experience in the industry, as well as make strong contacts which I hope to utilize throughout my degree and upon graduation. My ideal position would be acting as a lead programmer supervising a team or as a project manager.
+%---------------------------------------------------------
+
 \end{cvparagraph}
