Updated Experience and Summary

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -17,7 +17,9 @@
     {Sept. 2019 - Current} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item Worked with a multi-discipline team to bring multiple games through a full development cycle
+        \item Worked with a multi-discipline team to bring several games through a full development cycle
+        \item I am becoming a PASS Mentor in order to help new students and improve and expand my skill set
+        \item I am also active with helping other students with both general, programming, and version control questions
       \end{cvitems}
     }
 
