--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,13 +9,15 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
-        {Senior Student Ambassador}
+        {Senior Ambassador}
         {FXPlus}
         {Falmouth, Cornwall}
         {June 2020 - Current}
         {
             \begin{cvitems}
-                \item
+                \item Includes the same responsibilities as a Student Ambassador, but is more central to the running of events
+                \item Manages the distribution of Student Ambassadors during events
+                \item Relied on to handle any complications or problems that arise during an event
             \end{cvitems}
         }
 
@@ -26,10 +28,13 @@
         {October 2019 - June 2020}
         {
             \begin{cvitems}
-                \item Finished this employment due to being promoted to senior ambassador
+                \item Involved in the running of university events and open days
+                \item This includes discussing the course with potential students and leading group tours around the campus
+                \item I have also spoken on an online Q\&A panel as part of this role
+                \item I finished this employment due to being promoted to Senior Ambassador
             \end{cvitems}
-        }
-
+        }     
+\end{cventries}
 % %---------------------------------------------------------
 %   \cventry
 %     {Software Architect} % Job title
@@ -120,4 +125,3 @@
 %     }
 
 % %---------------------------------------------------------
-\end{cventries}
