--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -15,11 +15,10 @@
     {July 2019}
     {
         \begin{cvitems}
-            \item {Programmed a game of snake including collision detection and random apple placement}
-            \item {Included a display of the players score once they die}
-            \item {Added the ability to reset to starting conditions after dying by pressing 'r'}
-            \item {Use of dynamic arrays to provide no cap on the possible size of the snake}
-            \item {Scaled movement speed with the length of the snake to increase the difficulty as the player did better }
+            \item Programmed a game of snake including collision detection and random 'apple' placement
+            \item Included a display of the players score once they die without the use of text
+            \item Set up initial conditions so the game could be restarted with a single key press
+            \item Scaled movement speed with the length of the snake to increase the difficulty as the player does better 
         \end{cvitems}  
     }
 
