--- a/resume/published.tex
+++ b/resume/published.tex
@@ -24,14 +24,16 @@
     % }
 
     \cventry
-    {\href{https://dayluke.itch.io/yvaga-station}{Self published to itch.io (link)}}
+    {\href{https://dayluke.itch.io/yvaga-station}{Self published to itch.io (click here for link)}}
     {Yvaga Station - Team Leader}
     {Unity 2018.4}
     {May 2020}
     {
         \begin{cvitems}
+            \item Presented a concept pitch to University lecturers in order to continue development past prototype stage
             \item Asymmetric multiplayer game, using PUN2 for networking
-            \item Designed and implemented a custom movement system, allowing one team to be able to move along walls like a spider, as well as other abilities
+            \item Designed and implemented a custom movement system that included moving up stairs, spider-like climbing, and a charge leap
+            \item The game has NUMBER downloads (as of September 2020) on itch.io
         \end{cvitems}
     }
 \end{cventries}
