--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -14,9 +14,9 @@
         \text{}
         \item
         \item Proficient in C\# 
-        \item Confident with version control using Git, including branching and fixing merge conflicts
+        \item Confident with version control using Git, including branching and fixing of merge conflicts
         \item Familiar with Unity
-        \item Limited experience in Unreal Engine 4, including use of blueprints
+        \item Basic experience in Unreal Engine 4, including use of blueprints
         \item Experienced with agile and scrum development practices
         \item Confident and organised team and scrum leader
     \end{cvitems}
