--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,7 +8,7 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    Avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I am a confident presenter who is comfortable leading a team and liaising between different disciplines. I am currently seeking a summer internship position in order to gain experience in the industry, as well as make strong contacts which I hope to utilize throughout my degree and upon graduation. My ideal position would be acting as a lead programmer supervising a team or as a project manager.
+    Avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I am a confident presenter who is comfortable leading a team and liaising between different disciplines. My ideal position would be as a lead programmer supervising a team or as a project manager, and as such I am very interested in opportunities to grow towards these roles.
 %---------------------------------------------------------
 
 \end{cvparagraph}
