Refined based on feedback

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -18,6 +18,7 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item Worked with a multi-discipline team to bring several games through a full development cycle
+        \item Participated in modules including creating a custom physical controller and designing an audio generation tool
         \item I am becoming a PASS Mentor in order to help new students and improve and expand my skill set
         \item I am also active with helping other students with both general, programming, and version control questions
       \end{cvitems}
