--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -9,7 +9,7 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
-    {\href{https://github.com/HDonovan96/Snake}{Snake Project Github Link}}
+    {\href{https://github.com/HDonovan96/Snake}{https://github.com/HDonovan96/Snake}}
     {Snake}
     {C++ OpenGL}
     {July 2019}
