--- a/resume/published.tex
+++ b/resume/published.tex
@@ -24,7 +24,7 @@
     % }
 
     \cventry
-    {\href{https://dayluke.itch.io/yvaga-station}{Self published to itch.io (click here for link)}}
+    {Self published to itch.io (\href{https://dayluke.itch.io/yvaga-station}{https://dayluke.itch.io/yvaga-station})}
     {Yvaga Station - Team Leader}
     {Unity 2018.4}
     {May 2020}
@@ -33,7 +33,7 @@
             \item Presented a concept pitch to University lecturers in order to continue development past prototype stage
             \item Asymmetric multiplayer game, using PUN2 for networking
             \item Designed and implemented a custom movement system that included moving up stairs, spider-like climbing, and a charge leap
-            \item The game has NUMBER downloads (as of September 2020) on itch.io
+            \item The game has 192 downloads (as of September 2020) on itch.io
         \end{cvitems}
     }
 \end{cventries}
