--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,7 +8,6 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    Avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I am a confident presenter who is comfortable leading a team and liaising between different disciplines. My ideal position would be as a lead programmer supervising a team or as a project manager, and as such I am very interested in opportunities to grow towards these roles.
+    I am an avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I have become a confident presenter who is both comfortable leading a team and liaising between different disciplines. My ideal position would be as a lead programmer supervising a team or as a project manager, and as such I am very interested in opportunities to grow towards these roles.
 %---------------------------------------------------------
-
 \end{cvparagraph}
