--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,21 +9,21 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
-        {Senior Ambassador}
         {FXPlus}
+        {Senior Ambassador}
         {Falmouth, Cornwall}
         {June 2020 - Current}
         {
             \begin{cvitems}
-                \item Includes the same responsibilities as a Student Ambassador, but is more central to the running of events
+                \item Increased responsibility for the smooth running of events
                 \item Manages the distribution of Student Ambassadors during events
                 \item Relied on to handle any complications or problems that arise during an event
             \end{cvitems}
         }
 
     \cventry
-        {Student Ambassador}
         {FXPlus}
+        {Student Ambassador}
         {Falmouth, Cornwall}
         {October 2019 - June 2020}
         {
@@ -31,7 +31,6 @@
                 \item Involved in the running of university events and open days
                 \item This includes discussing the course with potential students and leading group tours around the campus
                 \item I have also spoken on an online Q\&A panel as part of this role
-                \item I finished this employment due to being promoted to Senior Ambassador
             \end{cvitems}
         }     
 \end{cventries}
