--- a/resume/published.tex
+++ b/resume/published.tex
@@ -30,9 +30,10 @@
     {May 2020}
     {
         \begin{cvitems}
-            \item Presented a concept pitch to University lecturers in order to continue development past prototype stage
-            \item Asymmetric multiplayer game, using PUN2 for networking
-            \item Designed and implemented a custom movement system that included moving up stairs, spider-like climbing, and a charge leap
+            \item Developed and implemented in Unity 2018.4
+            \item Presented a concept pitch to in order to continue development past prototype stage
+            \item Implemented symmetric multiplayer game using PUN2 for networking
+            \item Designed and implemented a modular custom movement system to expand on the options available to the player
             \item The game has 192 downloads (as of September 2020) on itch.io
         \end{cvitems}
     }
