--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -13,12 +13,15 @@
     \begin{cvitems}
         \text{}
         \item
-        \item Proficient in C\# 
-        \item Experience with programming in C++
-        \item Confident with version control using Git, including branching and fixing of merge conflicts
-        \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
-        \item Experienced with agile and scrum development practices
-        \item Confident and organised team and scrum leader
+        \item Languages: C\#, C++
+        \item Game Engines: Unity, Unreal Engine 4
+        \item Version Control: Git
+        \item Project Management: Agile, scrum, sprint planning
+        % \item Proficient in C\# and have some experience with C++
+        % \item Confident with version control using Git, including branching and fixing of merge conflicts
+        % \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
+        % \item Experienced with agile and scrum development practices
+        % \item Confident and organised team and scrum leader
     \end{cvitems}
 
 \end{cvparagraph}
