--- a/resume.tex
+++ b/resume.tex
@@ -110,7 +110,7 @@
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
 % \input{resume/committees.tex}
-% \input{resume/extracurricular.tex}
+\input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
