--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -11,31 +11,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
+    {Falmouth University} % Affiliation/role
+    {PASS Leader} % Organization/group
+    {Falmouth, United Kingdom} % Location
+    {September 2020 - Current} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
+        \item Planned and lead regular Peer Assisted Support Scheme (PASS) sessions for first year students in our department
+        \item Sessions were student led, with us tailoring sessions around what students wished to cover
+        \item Sessions focused on common problems and soft skills
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
 \end{cventries}
