Started add ing PacmanAI to projects

--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -9,6 +9,17 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
+    {\href{https://github.com/HDonovan96/PacmanAI}{https://github.com/HDonovan96/PacmanAI}}
+    {Pacman AI}
+    {Unity 2019.4.1}
+    {December 2020 - January 2021}
+    {
+        \begin{cvitems}
+            \item 
+        \end{cvitems}
+    }
+
+    \cventry
     {\href{https://github.com/HDonovan96/Snake}{https://github.com/HDonovan96/Snake}}
     {Snake}
     {C++ OpenGL}
