--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,6 +8,6 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    I am an avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I have become a confident presenter who is comfortable with all aspects of teamwork, including leading a team and liaising between different disciplines on a team. My ideal position would be progressing to a senior programmer or as a project manager, and as such I am very interested in opportunities to grow towards these roles.
+    I am an avid programmer with a strong knowledge of version control using Git, experience with multiple programming languages and an excitement for facing new, interesting challenges. I have become a confident presenter who is comfortable with all aspects of teamwork, including leading a team and liaising between different disciplines on a team. I have previously implemented custom movement controllers, boids and behaviour trees, and planned and designed complex weapon systems. My ideal position would be a programming position with opportunities to progress to senior positions as I grow with experience, and as such I am very interested in opportunities to grow towards these roles.
 %---------------------------------------------------------
 \end{cvparagraph}
