--- a/resume/education.tex
+++ b/resume/education.tex
@@ -14,7 +14,7 @@
     {BSc Computing For Games} % Degree
     {Falmouth University} % Institution
     {Falmouth, United Kingdom} % Location
-    {Sept. 2019 - Current} % Date(s)
+    {Sept. 2019 - June 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item Worked with a multi-discipline team to bring several games through a full development cycle
