Added pacman AI project

--- a/resume.tex
+++ b/resume.tex
@@ -105,6 +105,7 @@
 \input{resume/published.tex}
 \input{resume/projects.tex}
 \input{resume/education.tex}
+\newpage
 \input{resume/experience.tex}
 % \input{resume/honors.tex}
 % \input{resume/presentation.tex}
