--- a/resume/education.tex
+++ b/resume/education.tex
@@ -21,7 +21,7 @@
         \item Learned about and improved upon creating neat, maintainable code through commenting and UML diagrams
         \item Participated in modules including creating a custom physical controller and designing an audio generation tool
         \item Received and responded to feedback from concept pitches, module evaluations and regular game progress reviews
-        \item I am involved with a peer-assisted learning programme designed to help teach new students vital problem solving skills
+        \item I am involved with a peer-assisted learning programme (PASS) designed to help teach new students vital problem solving skills
         \item I am also active with helping other students with general, programming, and version control questions outside of this role
       \end{cvitems}
     }
