--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -12,7 +12,7 @@
         {IQMindware}
         {Freelance Programmer and Designer}
         {Falmouth, Cornwall}
-        {November 2020 - Current}
+        {November 2020 - January 2021}
         {
             \begin{cvitems}
                 \item Build and develop application from scratch based on a given brief
