--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -14,7 +14,7 @@
     {Falmouth University} % Affiliation/role
     {PASS Leader} % Organization/group
     {Falmouth, United Kingdom} % Location
-    {September 2020 - Current} % Date(s)
+    {September 2020 - January 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item Planned and lead regular Peer Assisted Support Scheme (PASS) sessions for first year students in our department
