--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -15,7 +15,23 @@
     {December 2020 - January 2021}
     {
         \begin{cvitems}
-            \item 
+            \item University project to implement behaviour trees for Pacman ghosts
+            \item Designed and implemented three unique behaviors - Scout, Guard, and Pursuit
+            \item Agents designed to work together - Scout relays players position to other agents while avoiding conflict with the player
+            \item Implemented agent 'memory', so agents remember the position of pills and the player and act only on this info
+        \end{cvitems}
+    }
+
+    \cventry
+    {}
+    {Infinity - Battle Royal}
+    {Unreal Engine 4.22.3}
+    {May 2020 - August 2020}
+    {
+        \begin{cvitems}
+            \item Designed code structure for complex weapon system with loot spawning, weapon modifications, and fire modes
+            \item Systems designed to interface with a custom network designed by another programmer
+            \item Implemented majority of the systems, including setting up recoil so it could be driven by IK systems
         \end{cvitems}
     }
 
