--- a/resume/published.tex
+++ b/resume/published.tex
@@ -25,16 +25,15 @@
 
     \cventry
     {Self published to itch.io (\href{https://dayluke.itch.io/yvaga-station}{https://dayluke.itch.io/yvaga-station})}
-    {Yvaga Station - Team Leader}
+    {Yvaga Station - Team Lead \& Programmer}
     {Unity 2018.4}
     {May 2020}
     {
         \begin{cvitems}
-            \item Developed and implemented in Unity 2018.4
             \item Presented a concept pitch to in order to continue development past prototype stage
-            \item Implemented symmetric multiplayer game using PUN2 for networking
+            \item Implemented asymmetric multiplayer game using PUN2 package for networking
             \item Designed and implemented a modular custom movement system to expand on the options available to the player
-            \item The game has 192 downloads (as of September 2020) on itch.io
+            \item The game has 272 downloads (as of February 2021) on itch.io
         \end{cvitems}
     }
 \end{cventries}
