--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -13,10 +13,10 @@
     \begin{cvitems}
         \text{}
         \item
-        \item Languages: C\#, C++
+        \item Languages: C\#, C++, Latex
         \item Game Engines: Unity, Unreal Engine 4
         \item Version Control: Git
-        \item Project Management: Agile, scrum, sprint planning
+        \item Project Management: Agile, Scrum, Sprint Planning, Trello
         % \item Proficient in C\# and have some experience with C++
         % \item Confident with version control using Git, including branching and fixing of merge conflicts
         % \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
