Added Carma and GNG

--- a/resume.tex
+++ b/resume.tex
@@ -59,7 +59,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Harry}{Donovan}
-\position{University Student{\enskip\cdotp\enskip}Games Programmer}
+\position{Producer{\enskip\cdotp\enskip}University Student{\enskip\cdotp\enskip}Programmer}
 \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
