--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,17 +9,29 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
-        {IQMindware}
-        {Freelance Programmer and Designer}
+        {Glass Nomad Games}
+        {Director}
         {Falmouth, Cornwall}
-        {November 2020 - January 2021}
+        {March 2021 - Current}
         {
             \begin{cvitems}
-                \item Build and develop application from scratch based on a given brief
-                \item Collate features from several previously developed applications 
-                \item Design new features with a focus on user retention
+                \item Started a company to publish video games my team and I were developing
+                \item Handled registration and set up with services such as Steam
             \end{cvitems}
         }
+
+    % \cventry
+    %     {IQMindware}
+    %     {Freelance Programmer and Designer}
+    %     {Falmouth, Cornwall}
+    %     {November 2020 - January 2021}
+    %     {
+    %         \begin{cvitems}
+    %             \item Build and develop application from scratch based on a given brief
+    %             \item Collate features from several previously developed applications 
+    %             \item Design new features with a focus on user retention
+    %         \end{cvitems}
+    %     }
 
     \cventry
         {FXPlus}
