--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -35,20 +35,20 @@
         \end{cvitems}
     }
 
-    \cventry
-    {\href{https://github.com/HDonovan96/Snake}{https://github.com/HDonovan96/Snake}}
-    {Snake}
-    {C++ OpenGL}
-    {July 2019}
-    {
-        \begin{cvitems}
-            \item Developed and implemented in OpenGL for C++
-            \item Programmed a game of snake including collision detection and random 'apple' placement
-            \item Displays players score upon death without the use of text as a challenge to see if the information could still be conveyed clearly
-            \item Set up initial conditions so the game could be restarted with a single key press
-            % \item Scaled movement speed with the length of the snake to increase the difficulty as the player does better 
-        \end{cvitems}  
-    }
+    % \cventry
+    % {\href{https://github.com/HDonovan96/Snake}{https://github.com/HDonovan96/Snake}}
+    % {Snake}
+    % {C++ OpenGL}
+    % {July 2019}
+    % {
+    %     \begin{cvitems}
+    %         \item Developed and implemented in OpenGL for C++
+    %         \item Programmed a game of snake including collision detection and random 'apple' placement
+    %         \item Displays players score upon death without the use of text as a challenge to see if the information could still be conveyed clearly
+    %         \item Set up initial conditions so the game could be restarted with a single key press
+    %         % \item Scaled movement speed with the length of the snake to increase the difficulty as the player does better 
+    %     \end{cvitems}  
+    % }
 
     % \cventry
     % {\href{https://github.com/HDonovan96/Iterative_Rocket_Glider_Design}{Rocket Glider Github Link}}
