--- a/resume/published.tex
+++ b/resume/published.tex
@@ -24,16 +24,31 @@
     % }
 
     \cventry
+    {Self published to Steam (\href{https://store.steampowered.com/app/1603990/Carma/}{https://store.steampowered.com/app/1603990/Carma/})}
+    {Carma - Producer \& Team Lead}
+    {Unity 2019.4}
+    {Published June 2021}
+    {
+        \begin{cvitems}
+            \item Worked with a multidisciplinary team to bring Carma from concept to published game
+            \item Planned sprints and development milestones using Agile
+            \item Worked with the team to remove any blockers and streamline development pipelines
+            \item Focused on maintaining team health and reinforcing healthy working practices
+            \item Handled setting up Steam store and updating builds
+        \end{cvitems}
+    }
+
+    \cventry
     {Self published to itch.io (\href{https://dayluke.itch.io/yvaga-station}{https://dayluke.itch.io/yvaga-station})}
     {Yvaga Station - Team Lead \& Programmer}
     {Unity 2018.4}
-    {May 2020}
+    {Published May 2020}
     {
         \begin{cvitems}
             \item Presented a concept pitch to in order to continue development past prototype stage
             \item Implemented asymmetric multiplayer game using PUN2 package for networking
             \item Designed and implemented a modular custom movement system to expand on the options available to the player
-            \item The game has 272 downloads (as of February 2021) on itch.io
+            % \item The game has 272 downloads (as of February 2021) on itch.io
         \end{cvitems}
     }
 \end{cventries}
