Removed extra curricular and trimmed down points

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -54,8 +54,8 @@
         {
             \begin{cvitems}
                 \item Involved in the running of university events and open days
-                \item This includes discussing the course with potential students and leading group tours around the campus
-                \item I have also spoken on an online Q\&A panel as part of this role
+                \item Pithched the courseand university to groups of potential students 
+                \item Spoken on an online Q\&A panel
             \end{cvitems}
         }     
 \end{cventries}
