--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -24,7 +24,7 @@
 
     \cventry
     {}
-    {Infinity - Battle Royal}
+    {Infinity - Battle Royale}
     {Unreal Engine 4.22.3}
     {May 2020 - August 2020}
     {
