--- a/resume/published.tex
+++ b/resume/published.tex
@@ -32,9 +32,9 @@
         \begin{cvitems}
             \item Worked with a multidisciplinary team to bring Carma from concept to published game
             \item Planned sprints and development milestones using Agile
-            \item Worked with the team to remove any blockers and streamline development pipelines
+            \item Removed blockers and streamlined development pipelines
             \item Focused on maintaining team health and reinforcing healthy working practices
-            \item Handled setting up Steam store and updating builds
+            \item Set up Steam store and kept builds updated
         \end{cvitems}
     }
 
