--- a/resume.tex
+++ b/resume.tex
@@ -104,14 +104,13 @@
 \input{resume/skills.tex}
 \input{resume/published.tex}
 \input{resume/projects.tex}
-\input{resume/education.tex}
-\newpage
 \input{resume/experience.tex}
+\input{resume/education.tex}
 % \input{resume/honors.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
 % \input{resume/committees.tex}
-\input{resume/extracurricular.tex}
+% \input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
