--- a/resume/education.tex
+++ b/resume/education.tex
@@ -16,14 +16,14 @@
     {Falmouth, United Kingdom} % Location
     {Sept. 2019 - June 2022} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
-        \item Worked with a multi-discipline team to bring several games through a full development cycle
-        \item Learned about and improved upon creating neat, maintainable code through commenting and UML diagrams
-        \item Participated in modules including creating a custom physical controller and designing an audio generation tool
-        \item Received and responded to feedback from concept pitches, module evaluations and regular game progress reviews
-        \item I am involved with a peer-assisted learning programme (PASS) designed to help teach new students vital problem solving skills
-        \item I am also active with helping other students with general, programming, and version control questions outside of this role
-      \end{cvitems}
+      % \begin{cvitems} % Description(s) bullet points
+      %   \item Worked with a multi-discipline team to bring several games through a full development cycle
+      %   \item Learned about and improved upon creating neat, maintainable code through commenting and UML diagrams
+      %   \item Participated in modules including creating a custom physical controller and designing an audio generation tool
+      %   \item Received and responded to feedback from concept pitches, module evaluations and regular game progress reviews
+      %   \item I am involved with a peer-assisted learning programme (PASS) designed to help teach new students vital problem solving skills
+      %   \item I am also active with helping other students with general, programming, and version control questions outside of this role
+      % \end{cvitems}
     }
 
 %---------------------------------------------------------
