Trimmed down points and sections to keep it to onepage£

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -40,22 +40,23 @@
         {June 2020 - Current}
         {
             \begin{cvitems}
+                \item Promoted from Student Ambassador
                 \item Increased responsibility for the smooth running of events
                 \item Manages the distribution of Student Ambassadors during events
                 \item Relied on to handle any complications or problems that arise during an event
             \end{cvitems}
         }
 
-    \cventry
-        {FXPlus}
-        {Student Ambassador}
-        {Falmouth, Cornwall}
-        {October 2019 - June 2020}
-        {
-            \begin{cvitems}
-                \item Involved in the running of university events and open days
-                \item Pithched the courseand university to groups of potential students 
-                \item Spoken on an online Q\&A panel
-            \end{cvitems}
-        }     
+    % \cventry
+    %     {FXPlus}
+    %     {Student Ambassador}
+    %     {Falmouth, Cornwall}
+    %     {October 2019 - June 2020}
+    %     {
+    %         \begin{cvitems}
+    %             \item Involved in the running of university events and open days
+    %             \item Pithched the courseand university to groups of potential students 
+    %             \item Spoken on an online Q\&A panel
+    %         \end{cvitems}
+    %     }     
 \end{cventries}
