--- a/resume.tex
+++ b/resume.tex
@@ -64,7 +64,7 @@
 
 % \mobile{07747 596 167}
 \email{harry.bd11@gmail.com}
-% \homepage{www.posquit0.com}
+\homepage{https://hdonovan96.github.io/portfolio}
 \github{HDonovan96}
 % \linkedin{posquit0}
 % \gitlab{gitlab-id}
