Remove @ from twitter username

--- a/resume.tex
+++ b/resume.tex
@@ -69,7 +69,7 @@
 % \linkedin{posquit0}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
-\twitter{@EachAbyss}
+\twitter{EachAbyss}
 % \skype{skype-id}
 % \reddit{reddit-id}
 % \medium{madium-id}
