--- a/resume.tex
+++ b/resume.tex
@@ -58,12 +58,12 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Harry}{Donovan}
+\name{Frost}{Donovan}
 \position{Producer{\enskip\cdotp\enskip}University Student{\enskip\cdotp\enskip}Programmer}
 \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
-\email{harry.bd11@gmail.com}
+\email{FrostBDonovan@gmail.com}
 \homepage{https://hdonovan96.github.io/portfolio}
 \github{HDonovan96}
 % \linkedin{posquit0}
