Minor typo correction

--- a/resume.tex
+++ b/resume.tex
@@ -92,7 +92,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Harry Donovan~~~·~~~Résumé}
+  {Frost Donovan~~~·~~~Résumé}
   {\thepage}
 
 
