--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -13,7 +13,7 @@
     \begin{cvitems}
         \text{}
         \item
-        \item Project Management: Jira, Confluence, Trello, Agiles
+        \item Project Management: Jira, Confluence, Trello, Agile
         \item Version Control: Git
         \item Game Engines: Unity, Unreal Engine 4
         \item Languages: C\#, C++, Latex
