Added project silverback to published games

--- a/resume.tex
+++ b/resume.tex
@@ -102,10 +102,10 @@
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex} % First draft done
 \input{resume/skills.tex}
-\input{resume/education.tex}
 \input{resume/published.tex}
+\input{resume/education.tex}
 \input{resume/experience.tex}
-\input{resume/projects.tex}
+% \input{resume/projects.tex}
 % \input{resume/honors.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
