--- a/resume/published.tex
+++ b/resume/published.tex
@@ -24,6 +24,21 @@
     % }
 
     \cventry
+    {In Development}
+    {Project: Silverback - Producer \& Team Lead}
+    {Unity 2020.3}
+    {September 2021 - Current}
+    {
+        \begin{cvitems}
+            \item Made the decision alongside my team to cancel a current project during pre-production to develop this game instead
+            \item Developed a Github Action workflow to automatically generate game builds 
+            % \item ~~And hopefully auto upload them to Steam if I can get it working~~
+            \item Utilised Story Points, Release Planning, and Jira to produce a development roadmap
+        \end{cvitems}  
+    }
+
+
+    \cventry
     {Self published to Steam (\href{https://store.steampowered.com/app/1603990/Carma/}{https://store.steampowered.com/app/1603990/Carma/})}
     {Carma - Producer \& Team Lead}
     {Unity 2019.4}
