Include testing and publishing in git actin flow for silverback

--- a/resume/published.tex
+++ b/resume/published.tex
@@ -30,8 +30,8 @@
     {September 2021 - Current}
     {
         \begin{cvitems}
-            \item Made the decision alongside my team to cancel a current project during pre-production to develop this game instead
-            \item Developed a Github Action workflow to automatically generate game builds 
+            \item Made the decision alongside my team to cancel a project in pre-production to develop this game instead
+            \item Developed a Github Action workflow to automatically build, test \& publish daily builds to Steam
             % \item ~~And hopefully auto upload them to Steam if I can get it working~~
             \item Utilised Story Points, Release Planning, and Jira to produce a development roadmap
         \end{cvitems}  
