Corrected website url not redirecting correctly

--- a/resume.tex
+++ b/resume.tex
@@ -64,7 +64,7 @@
 
 % \mobile{07747 596 167}
 \email{FrostBDonovan@gmail.com}
-\homepage{https://hdonovan96.github.io/portfolio}
+\homepage{hdonovan96.github.io/portfolio}
 \github{HDonovan96}
 % \linkedin{posquit0}
 % \gitlab{gitlab-id}
