Updated github details

--- a/resume.tex
+++ b/resume.tex
@@ -64,8 +64,8 @@
 
 % \mobile{07747 596 167}
 \email{FrostBDonovan@gmail.com}
-\homepage{hdonovan96.github.io/portfolio}
-\github{HDonovan96}
+\homepage{fdonovan98.github.io/portfolio}
+\github{FDonovan98}
 % \linkedin{posquit0}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
