Update based on feedack - remove address, remove Uni student cus its obvious, replace grad w/ associate producer

--- a/resume.tex
+++ b/resume.tex
@@ -59,8 +59,8 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Frost}{Donovan}
-\position{Producer{\enskip\cdotp\enskip}University Student{\enskip\cdotp\enskip}Programmer}
-\address{Falmouth, Cornwall, United Kingdom}
+\position{Producer{\enskip\cdotp\enskip}Programmer}
+% \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
 \email{FrostBDonovan@gmail.com}
