--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,7 +8,7 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    I am an avid programmer and passionate producer, with a strong knowledge of version control using Git, agile methodology, and an excitement for facing new, interesting challenges. I have lead teams which have published to both Itch and Steam, always with a focus on maintaining healthy and flexible working practices. My ideal position would be a Graduate/ Junior Producer role, with a strong focus on growing my skills and experience so I could progress to a more senior position.
+    I am an avid programmer and passionate producer, with a strong knowledge of version control using Git, agile methodology, and an excitement for facing new, interesting challenges. I have lead teams which have published to both Itch and Steam, always with a focus on maintaining healthy and flexible working practices. My ideal position would be an Associate Producer role, with a strong focus on growing my skills and experience so I could progress to a more senior position.
     
     % I have previously implemented custom movement controllers, boids and behaviour trees, and planned and designed complex weapon systems. My ideal position would be a programming position with opportunities to progress to senior positions as I grow with experience, and as such I am very interested in opportunities to grow towards these roles.
 %---------------------------------------------------------
