Add github actions to languages known

--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -16,7 +16,7 @@
         \item Project Management: Jira, Confluence, Trello, Agile
         \item Version Control: Git
         \item Game Engines: Unity, Unreal Engine 4
-        \item Languages: C\#, C++, Latex
+        \item Languages: C\#, C++, Latex, Github Actions
         % \item Proficient in C\# and have some experience with C++
         % \item Confident with version control using Git, including branching and fixing of merge conflicts
         % \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
