--- a/resume/published.tex
+++ b/resume/published.tex
@@ -24,8 +24,8 @@
     % }
 
     \cventry
-    {In Development}
-    {Project: Silverback - Producer \& Team Lead}
+    {Self published to Steam (\href{https://store.steampowered.com/app/1836170/Castan/}{https://store.steampowered.com/app/1836170/Castan/})}
+    {Castan - Producer \& Team Lead}
     {Unity 2020.3}
     {September 2021 - Current}
     {
@@ -44,6 +44,7 @@
     {Published June 2021}
     {
         \begin{cvitems}
+            \item Shortlisted for the Grads In Games Student Game Award
             \item Worked with a multidisciplinary team to bring Carma from concept to published game
             \item Planned sprints and development milestones using Agile
             \item Removed blockers and streamlined development pipelines
