Added note about company accounts and gov paperwork to Director role

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -16,7 +16,8 @@
         {
             \begin{cvitems}
                 \item Started a company to publish video games my team and I were developing
-                \item Handled registration and set up with services such as Steam
+                \item Managed company accounts and government-required paperwork
+                \item Handled Steam registration, set up, and backend work for multiple titles
             \end{cvitems}
         }
 
